Some public styles (not complete)

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,17 @@
 <footer>
-    <p class="text-center text-muted">© Copyright 2016. <a href="/login">admin</a></p>
+	<small>ixCMS &copy; 2016.</small>
+	<ul role="navigation">
+		<li>
+            <a href="/feeds/rss"><i class="fa fa-rss" aria-hidden="true"></i>&nbsp;RSS</a>
+        </li>
+		<li>
+            <a href="http://twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;Twitter</a>
+        </li>
+		<li>
+            <a href="/login" title="Access to administration"><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Admin</a>
+        </li>
+		<li>
+            <a href="/" title="Homepage"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a>
+        </li>
+	</ul>
 </footer>
