--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <title>Super Awesome</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <title>ixCMS</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
 </head>
