--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,17 +2,30 @@
 <html lang="en">
 <% include ../partials/head %>
 <body class="container">
-    <% include ../partials/header %>
-    <main>
-        <% if (posts.length) { %>
-            <ul>
-                <% posts.forEach(function(post){ %>
-                    <li><a href="/posts/<%= post.url %>"><%= post.title %></a></li>
+<header class="big-top">
+    <div class="container">
+        <nav role="navigation">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <% menu.forEach(function(item){ %>
+                    <li><a href="/pages/<%= item.url %>"><%= item.title %></a></li>
                 <% }) %>
             </ul>
-        <% } %>
-    </main>
+        </nav>
+        <h1>Hello</h1>
+        <span class="motto">some very smart motto</span>
+    </div>
+</header>
+<main>
+    <% if (posts.length) { %>
+        <ul>
+            <% posts.forEach(function(post){ %>
+                <li><a href="/posts/<%= post.url %>"><%= post.title %></a></li>
+            <% }) %>
+        </ul>
+    <% } %>
+</main>
 
-    <% include ../partials/footer %>    
+<% include ../partials/footer %>    
 </body>
 </html>
