--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,17 +1,11 @@
-<footer>
-	<small>ixCMS &copy; 2016.</small>
-	<ul role="navigation">
-		<li>
-            <a href="/feeds/rss"><i class="fa fa-rss" aria-hidden="true"></i>&nbsp;RSS</a>
-        </li>
-		<li>
-            <a href="http://twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;Twitter</a>
-        </li>
-		<li>
-            <a href="/login" title="Access to administration"><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Admin</a>
-        </li>
-		<li>
-            <a href="/" title="Homepage"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a>
-        </li>
-	</ul>
-</footer>
+<div class="wrap">
+    <footer id="bottom">
+        <small>ixCMS &copy; 2016.</small>
+        <ul role="navigation">
+            <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i>&nbsp;RSS</a></li>
+            <li><a href="http://twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;Twitter</a></li>
+            <li><a href="/login" title="Přístup do administrace"><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Admin</a></li>
+            <li><a href="/" title="Home"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
+        </ul>
+    </footer>
+</div>
