--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,17 @@
 <head>
     <meta charset="UTF-8">
     <title>ixCMS</title>
+    <meta name="description" content="Page description...">
+    <meta name="viewport" content="width=device-width">
+
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <!-- TODO load local fonts instead of google API -->
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,800italic,300,600,800' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="/images/favicon.png">
+
+    <script src="/js/zepto.js"></script>
+    <script src="/js/main.js"></script>
+
 </head>
