--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,3 +1,4 @@
+<a id="logo" href="/"><script>document.write(window.location.hostname)</script></a>
 <nav id="main" role="navigation">
     <ul>
         <% menu.forEach(function(item){ %>
