--- a/views/admin/pages/pages.ejs
+++ b/views/admin/pages/pages.ejs
@@ -5,10 +5,10 @@
   <% include ../partials/header %>
   <div id="toolbar">
     <ul>
-      <li><a href="/admin/editor/pages" class="color1"><i class="fa fa-plus-circle"></i>New page</a></li>
-      <li><a href="#" class="color2"><i class="fa fa-list-alt"></i>Edit menu</a></li>
+      <li><a href="/admin/editor/pages" class="color1"><i class="fa fa-plus-circle" aria-hidden="true"></i>New page</a></li>
+      <li><a href="#" class="color2"><i class="fa fa-list-alt" aria-hidden="true"></i>Edit menu</a></li>
       <li class="search">
-        <label for="searchfilter"><i class="fa fa-search"></i></label>
+        <label for="searchfilter"><i class="fa fa-search" aria-hidden="true"></i></label>
         <input ng-model="searchFilter" placeholder="Search" id="searchfilter">
       </li>
     </ul>
