--- a/views/admin/pages/posts.ejs
+++ b/views/admin/pages/posts.ejs
@@ -5,9 +5,9 @@
   <% include ../partials/header %>
   <div id="toolbar">
     <ul>
-      <li><a href="/admin/editor/posts" class="color1"><i class="fa fa-plus-circle"></i>New post</a></li>
+      <li><a href="/admin/editor/posts" class="color1"><i class="fa fa-plus-circle" aria-hidden="true"></i>New post</a></li>
       <li class="search">
-        <label for="searchfilter"><i class="fa fa-search"></i></label>
+        <label for="searchfilter"><i class="fa fa-search" aria-hidden="true"></i></label>
         <input ng-model="searchFilter" placeholder="Search" id="searchfilter">
       </li>
     </ul>
