--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
                     <article class="wrap">
                         <h2><a href="/posts/<%= post.url %>" title="<%= post.title %>"><%= post.title %></a></h2>
                         <div class="content"><%- post.abstract %></div>
-                        <footer>Publikováno: <time datetime="TIME">1.1.2000</time>; tags: <a href="">tag1</a></footer>
+                        <footer>Published: <time datetime="<%= post.date %>"><%= post.date %></time>; tags: <a href="#">tag1</a></footer>
                     </article>
                 </li>
             <% }) } %>
