--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <% include ../partials/head %>
-<body class="<?php echo body_class(); ?>">
+<body class="posts home page">
 <% include ../partials/slidey %>
 <div class="main-wrap">
     <header id="top" style="background-image: url('/images/galaxy.jpg');">
