--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,8 +4,8 @@
         <ul role="navigation">
             <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i>&nbsp;RSS</a></li>
             <li><a href="http://twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;Twitter</a></li>
-            <li><a href="/login" title="Přístup do administrace"><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Admin</a></li>
-            <li><a href="/" title="Home"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
+            <li><a href="/login"><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Admin</a></li>
+            <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
         </ul>
     </footer>
 </div>
