--- a/views/admin/pages/editor.ejs
+++ b/views/admin/pages/editor.ejs
@@ -6,9 +6,9 @@
   <div ng-controller="editorCtrl">
   <div id="toolbar">
     <ul>
-      <li><a href ng-click="docSave()" class="color1"><i class="fa fa-save"></i>Save document</a></li>
-      <li><a href ng-click="showEditor = !showEditor;" class="color2"><i class="fa fa-wpforms"></i>{{showEditor ? 'Hide extra fields' : 'Show extra fields'}}</a></li>
-      <li><a href ng-click="docExit()" class="color3"><i class="fa fa-chevron-right"></i>Exit without saving</a></li>
+      <li><a href ng-click="docSave()" class="color1"><i class="fa fa-save" aria-hidden="true"></i>Save document</a></li>
+      <li><a href ng-click="showEditor = !showEditor;" class="color2"><i class="fa fa-wpforms" aria-hidden="true"></i>{{showEditor ? 'Hide extra fields' : 'Show extra fields'}}</a></li>
+      <li><a href ng-click="docExit()" class="color3"><i class="fa fa-chevron-right" aria-hidden="true"></i>Exit without saving</a></li>
     </ul>
   </div>
   <form class="nice-form editor-border" ng-show="showEditor">
