--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -1,10 +1,10 @@
 <nav ng-controller="headerCtrl">
   <ul id="menu">
-    <li><a href="/admin/menu/overview" ng-class="activeMenu === 'overview' ? 'active' : ''"><i class="fa fa-home"></i>Overview</a></li>
-    <li><a href="/admin/menu/comments" ng-class="activeMenu === 'comments' ? 'active' : ''"><i class="fa fa-comments"></i>Comments</a></li>
-    <li><a href="/admin/menu/posts" ng-class="activeMenu === 'posts' ? 'active' : ''"><i class="fa fa-pencil"></i>Posts</a></li>
-    <li><a href="/admin/menu/pages" ng-class="activeMenu === 'pages' ? 'active' : ''"><i class="fa fa-book"></i>Pages</a></li>
-    <li><a href="/admin/menu/settings" ng-class="activeMenu === 'settings' ? 'active' : ''"><i class="fa fa-cog"></i>Settings</a></li>
-    <li style="float:right"><a href="/logout"><i class="fa fa-sign-out"></i>Logout</a></li>
+    <li><a href="/admin/menu/overview" ng-class="activeMenu === 'overview' ? 'active' : ''"><i class="fa fa-home" aria-hidden="true"></i>Overview</a></li>
+    <li><a href="/admin/menu/comments" ng-class="activeMenu === 'comments' ? 'active' : ''"><i class="fa fa-comments" aria-hidden="true"></i>Comments</a></li>
+    <li><a href="/admin/menu/posts" ng-class="activeMenu === 'posts' ? 'active' : ''"><i class="fa fa-pencil" aria-hidden="true"></i>Posts</a></li>
+    <li><a href="/admin/menu/pages" ng-class="activeMenu === 'pages' ? 'active' : ''"><i class="fa fa-book" aria-hidden="true"></i>Pages</a></li>
+    <li><a href="/admin/menu/settings" ng-class="activeMenu === 'settings' ? 'active' : ''"><i class="fa fa-cog" aria-hidden="true"></i>Settings</a></li>
+    <li style="float:right"><a href="/logout"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
   </ul>
 </nav>
