--- a/views/partials/slidey.ejs
+++ b/views/partials/slidey.ejs
@@ -2,8 +2,7 @@
     <div class="wrap">
         <form id="search" action="" method="post">
             <label for="term">Search</label>
-            <input type="search" id="term" name="term" placeholder="Search&hellip;" value="TODO search_term" />
-            <input type="hidden" id="whatSearch" name="whatSearch" value="all" />
+            <input type="search" id="term" name="term" placeholder="Search&hellip;" />
         </form>
         <aside>
             <b>Categories</b>
