--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -2,7 +2,7 @@
 <nav id="main" role="navigation">
     <ul>
         <% menu.forEach(function(item){ %>
-            <li><a href="/pages/<%= item.url %>"><%= item.title %></a></li>
+            <li><%- link_to(item.title, '/pages/' + item.url) %></li>
         <% }) %>
         <li class="tray">
             <a href="#tray" class="linky"><img class="categories-menu" src="/images/categories.png" alt="Categories"></a>
