--- a/views/admin/pages/overview.ejs
+++ b/views/admin/pages/overview.ejs
@@ -12,8 +12,8 @@
         <td>{{overview.siteName}}</td>
       </tr>
       <tr>
-        <td>Number of pages</td>
-        <td>{{overview.pageCount}}</td>
+        <td>Number of posts</td>
+        <td>{{overview.postCount}}</td>
       </tr>
       <tr>
         <td>Number of pages</td>
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <td>Last post</td>
-        <td>- days ago</td>
+        <td>{{overview.lastPost}} days ago</td>
       </tr>
     </table>
 
